--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -73,13 +73,16 @@ form.aria-label {
 .main-contents{
   border: 1px solid gray;
   margin-top: 20px;
-  background: #FFFFFF
+  background: #FFFFFF;
+  border-radius: 10px;
 }
 
 .main-image img{
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .content-wrapper{
@@ -169,18 +172,11 @@ form.aria-label {
   background: #FFFFFF
 }
 
-.post-show-image{
+.post-show-image img {
+  margin-left: 30px;
   text-align: center;
-  width: 400px;
+  width: 500px;
   height: 300px;
-  margin: auto auto 15px auto;
-}
-
-
-.show-image {
-  text-align: center;
-  width: 60%;
-  margin: auto auto 15px auto;
 }
 
 .user-content {
@@ -191,6 +187,11 @@ iframe {
   margin-left: 30px;
   width: 500px;
   height: 300px;
+}
+
+.row-actions {
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 
