--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,8 +14,8 @@
 
           <div class="content-wrapper">
             <div class="park">
-              <p><%= link_to(post.park,"/posts/#{post.id}") %></p>
-              <p><%= post.access %></p>
+              <p><i class="fa fa-leaf" aria-hidden="true"></i> <%= link_to(post.park,"/posts/#{post.id}") %></p>
+              <p><i class="fa fa-train" aria-hidden="true"></i> <%= post.access %></p>
               <%= raw(post.tag_list.map { |t| link_to t, tag_path(t) }.join(' ')) %>
             </div>
           </div>
