--- a/app/views/posts/likes.html.erb
+++ b/app/views/posts/likes.html.erb
@@ -1,24 +1,25 @@
 <div class="post-show">
 
   <div class="show-park">
-    <p><%= @post.park %></p>
+    <p><i class="fa fa-leaf" aria-hidden="true"></i><%= @post.park %></p>
   </div>
   <div class="post-show-image">
     <%= image_tag @post.image_url(:thumb) if @post.image.present? %>
   </div>
+  <br>
   <div class="show-outline">
     <p><%= @post.outline %></p>
   </div>
   <div class="show-locate">
-    <p>所在地</p>
+    <p><i class="fa fa-map-marker"></i>所在地</p>
     <p><%= @post.location %></p>
   </div>
   <div class="show-access">
-    <p>アクセス</p>
+    <p><i class="fa fa-train"></i>アクセス</p>
     <p><%= @post.access %></p>
   </div>
 
-  <p>公園の場所</p>
+  <p><i class="fa fa-map" aria-hidden="true"></i>公園の地図</p>
      <input id="address" type="textbox" value="<%= @post.location %>">
      <input type="button" value="クリックして地図で見る" onclick="codeAddress()">
      <div id='map'></div>
@@ -51,13 +52,13 @@
                      map: map,
                      position: results[0].geometry.location
                  });
-             } else {
+              } else {
                  alert('該当する結果がありませんでした：' + status);
-             }
-         });
-     }
-  </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtWJ1SNDv5ihQnErxLwbgiHyflWaUvX34&callback=initMap"></script>
+              }
+          });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtWJ1SNDv5ihQnErxLwbgiHyflWaUvX34&callback=initMap"></script>
   <br>
 
   <div class="posts-mark">
@@ -68,7 +69,8 @@
 
 
   <br>
-  <div class="row actions" id="comment-form-post-<%= @post.id.to_s %>">
+
+  <div class="row-actions" id="comment-form-post-<%= @post.id.to_s %>">
     <%= form_with model: [@post, Comment.new], class: "w-100" do |f| %>
       <%= f.hidden_field :user_id, value: current_user.id %>
       <%= f.hidden_field :post_id, value: @post.id %>
@@ -81,21 +83,25 @@
     <li class="active"><%= link_to("「いいね！」したユーザー", "/posts/#{@post.id}/likes") %></li>
   </ul>
 
-  <% @post.likes.each do |like| %>
-    <div class="mb-2">
-      <span>
-        <div class="comment-user-image">
-          <%= image_tag like.user.image_name.to_s %>
-        </div>
-        <strong>
-          <%= link_to like.user.name, user_path(like.user), class: "no-text-decoration black-color" %>
-        </strong>
-      </span>
-    </div>
-  <% end %>
+    <% @post.likes.each do |like| %>
+      <div class="mb-2">
+        <span>
+          <div class="comment-user-image">
+            <%= image_tag like.user.image_name.to_s %>
+          </div>
+          <strong>
+            <%= link_to like.user.name, user_path(like.user), class: "no-text-decoration black-color" %>
+         </strong>
+       </span>
+     </div>
+   <% end %>
 
-  <div class="ml-auto posts_button">
-    <a class="btn btn-outline-info" href="/posts" role="button">公園一覧へ</a>
-  </div>
+  <br>
+  <hr>
+  <br>
+
+<div class="ml-auto posts_button">
+<a class="btn btn-outline-info" href="/posts" role="button">公園一覧へ</a>
+</div>
 
 </div>
