posts/show_css追加

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -166,8 +166,9 @@ form.aria-label {
 /*show*/
 .post-show{
   max-width: 600px;
-  margin: 0 auto;
+  margin: 30px auto 30px;
   padding: 20px;
+  border-radius: 10px;
   border: 1px solid gray;
   background: #FFFFFF
 }
