ハッシュタグ縮小_root

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -22,11 +22,14 @@ a:hover {
   color: #66CCFF;
 }
 
-
 .comment-count {
   position:relative;
   width: 10px;
   top: 7px;
+}
+
+.tag-list {
+  font-size: 12px;
 }
 
 //indexのsearch機能
