--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,12 @@
   padding: 2rem;
 }
 
+.container-edit {
+  @extend .container-fluid;
+  max-width: 576px;
+  padding: 2rem;
+}
+
 // 「ログインしました」などのフラッシュ用スタイル
 
 .alert-notice {
