--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -43,6 +43,15 @@
       最寄り駅、バス停を入力してください。
   </small>
 </div>
+
+<div class="form-group">
+  <%= f.label :tag_list, 'タグをカンマ区切りで入力' %>
+  <%= text_field_tag 'post[tag_list]', @post.tag_list.join(","), :class => "form-control" %>
+  <small id="tag-tip" class="form-text text-muted">
+      ダグを入力してください。
+  </small>
+</div>
+
   <%= f.submit '投稿', class: 'btn btn-info btn-block' %>
   <small id="submit-tip" class="form-text text-muted">
       投稿する前に投稿内容を見直してください!
