--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,7 +7,9 @@
 }
 
 .main-users-index {
+  margin:0 auto;
   margin-bottom: 30px;
+  width: 600px;
 }
 
 .users-index-item {
@@ -66,6 +68,8 @@
 }
 
 .posts-index-item {
+  margin:0 auto;
+  width: 550px;
   background-color: white;
   padding-left: 20px;
   padding-bottom: 20px;
@@ -74,9 +78,11 @@
 
 .user-tabs {
   margin-top: 40px;
+  margin:0 auto;
   background-color: white;
   overflow: hidden;
   box-shadow: 0 2px 6px #c1ced7;
+  width: 550px;
 }
 
 .user-tabs li {
