--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -69,10 +69,12 @@
 
 .posts-index-item {
   margin:0 auto;
-  width: 550px;
-  background-color: white;
+  margin-bottom: 30px;
   padding-left: 20px;
   padding-bottom: 20px;
+  border-radius: 0 0 5px 5px;
+  width: 550px;
+  background-color: white;
 }
 
 
@@ -81,6 +83,7 @@
   margin:0 auto;
   background-color: white;
   overflow: hidden;
+  border-radius: 5px 5px 0 0;
   box-shadow: 0 2px 6px #c1ced7;
   width: 550px;
 }
