--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,7 @@
     <p><i class="fa fa-train"> </i> アクセス</p>
     <p><%= @post.access %></p>
   </div>
-  <div class="p-map">
+  <div class="map-show">
     <p><i class="fa fa-map" aria-hidden="true"> </i> 公園の地図</p>
     <iframe
        src="https://maps.google.co.jp/maps?output=embed&q=<%= @post.location %>&t=m&z=15"
