--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -6,7 +6,7 @@
 <div id="modal01" class="modal js-modal">
   <div class="modal__bg js-modal-close"></div>
     <div class="modal__content">
-      <div class="may-map">
+      <div class="map-index">
         <iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV&z=12" width="800" height="480"></iframe>
       </div>
       <br>
