--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,17 +9,18 @@
 .main-users-index {
   margin:0 auto;
   margin-bottom: 30px;
-  width: 600px;
+  width: 550px;
 }
 
 .users-index-item {
-  padding: 20px 30px;
+  margin: auto;
+  padding: 20px 20px;
   background-color: white;
   overflow: hidden;
   box-shadow: 0 2px 6px #c1ced7;
   display: table;
-  width: 100%;
 }
+
 
 .user-left img {
   width: 50px;
@@ -90,10 +91,12 @@
 
 .user-tabs li {
   float: left;
+  width: 100%;
 }
 
 .user-tabs li.active {
   border-bottom: 2px solid #3ecdc6;
+  width: 100%;
 }
 
 .user-tabs li.active a {
