--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,4 +1,5 @@
 /*index*/
+
 .users-heading {
   font-weight: 200px;
   margin: 60px 0 20px;
@@ -18,7 +19,7 @@
   overflow: hidden;
   box-shadow: 0 2px 6px #c1ced7;
   display: table;
-  width: 100%;
+  max-width: 100%;
 }
 
 .user-left img {
@@ -73,8 +74,10 @@
   padding-left: 20px;
   padding-bottom: 20px;
   border-radius: 0 0 5px 5px;
-  width: 550px;
   background-color: white;
+  width: 550px;
+  max-width: 100%;
+  height: auto;
 }
 
 
