headerメニュー色変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,10 +47,10 @@ header {
   text-decoration: none;
 }
 
+
 .header-logo {
   font-family: Pacifico, sans-serif;
   font-size: 45px;
-  color: white;
   display: inline-block;
   margin-left: 20px;
 }
@@ -66,6 +66,7 @@ header {
   font-size: 13px;
   color: white;
   padding-left: 15px;
+  opacity: 80%;
 }
 
 .header-menus a {
