--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,46 +2,46 @@
   <h1>アカウント編集</h1>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
      <%= render "devise/shared/error_messages", resource: resource %>
-
+   <br>
    <div class="field">
       <%= f.label :image_name %><br/>
       <%= f.file_field :image_name, autofocus: true %><br/>
    </div>
+   <br><br>
    <div class="field">
      <%= f.label :name %><br />
      <%= f.text_field :name, autofocus: true %>
    </div>
-
+   <br>
    <div class="field">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
     </div>
-
+    <br>
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
     <% end %>
-
+  
     <div class="field">
       <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i><br />
       <%= f.password_field :password, autocomplete: "new-password" %>
       <% if @minimum_password_length %>
-      <br />
-      <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
+        <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
       <% end %>
     </div>
-
+    <br>
     <div class="field">
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
-
+    <br>
     <div class="field">
       <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes') %>)</i><br />
       <%= f.password_field :current_password, autocomplete: "current-password" %>
     </div>
-
+    <br>
     <div class="actions">
-      <%= f.submit t('.update') %>
+      <%= f.submit t('.update'), class: 'btn btn-primary btn-block' %>
     </div>
   <% end %>
 
