--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,41 +1,28 @@
 <div class="container-login">
   <h2>新規登録</h2>
+  <br>
+  <%= form_for(@user) do |f| %>
+    <div class="form-group">
+      <p><%= f.label :name, '名前' %></p>
+      <%= f.text_field :name, class: 'form-control' %>
+    </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="form-group">
+      <p><%= f.label :email, 'メールアドレス' %></p>
+      <%= f.email_field :email, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-      <%= f.label :name %><br/>
-      <%= f.text_field :name %>
-   </div>
+    <div class="form-group">
+      <p><%= f.label :password, 'パスワード' %></p>
+      <%= f.password_field :password, class: 'form-control' %>
+    </div>
 
- <div class="field">
-   <%= f.label :image_name %><br/>
-   <%= f.file_field :image_name %>
- </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %>文字以上)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "登録" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+    <div class="form-group">
+      <p><%= f.label :password_confirmation, 'パスワード（もう１度ご入力ください）' %></p>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+    </div>
+    <br>
+     <%= f.submit '登録する', class: 'btn btn-primary btn-block' %>
+  <% end %>
+    <br>
 </div>
