--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -126,7 +126,7 @@ form.search-form {
 .modal{
     display: none;
     height: 100vh;
-    position: fixed;
+    position:fixed;
     top: 0;
     width: 100%;
 }
@@ -140,6 +140,7 @@ form.search-form {
    position: absolute;
    width: 100%;
 }
+
 .modal__content {
     left: 50%;
     padding: 40px;
@@ -158,6 +159,24 @@ form.search-form {
 .material-icons {
   margin-bottom: -5px;
 }
+
+.tag-index__title{
+  margin-bottom: 15px;
+}
+
+.tag-wrapper a{
+  margin-bottom: 10px;
+  width:33.333333%;
+  float:left;
+}
+
+.js-modal-close, .btn-outline-dark {
+  position:absolute;
+  left: 100%;
+  top: 0;
+  color: gray;
+}
+
 
 /*map*/
 
