--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,12 @@
 <div class="container-login">
   <h2>新規登録</h2>
   <br>
-  <%= form_for(@user) do |f| %>
-    <div class="form-group">
+
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+
+
+<div class="form-group">
       <p><%= f.label :name, '名前' %></p>
       <%= f.text_field :name, class: 'form-control' %>
     </div>
@@ -13,7 +17,7 @@
     </div>
 
     <div class="form-group">
-      <p><%= f.label :password, 'パスワード' %></p>
+      <p><%= f.label :password, 'パスワード（6文字以上）' %></p>
       <%= f.password_field :password, class: 'form-control' %>
     </div>
 
@@ -22,7 +26,9 @@
       <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
     <br>
-     <%= f.submit '登録する', class: 'btn btn-primary btn-block' %>
+    <div class="actions">
+      <%= f.submit '登録する', class: 'btn btn-primary btn-block' %>
+    </div>
   <% end %>
-    <br>
-</div>
+
+  </div>
