--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -10,18 +10,21 @@
         <iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV&z=12" width="800" height="480"></iframe>
       </div>
       <br>
-      <a class="js-modal-close" href="">閉じる</a>
+      <a class="js-modal-close, btn btn-outline-dark" href="">✖️</a>
    </div>
  </div>
  <div id="modal02" class="modal js-modal">
    <div class="modal__bg js-modal-close"></div>
      <div class="modal__content">
        <div class="tag-index">
-         <% @tags.each do |tag| %>
-           <%= link_to "#{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class: "label label-default" %>
-         <% end %>
+         <h2 class="tag-index__title"># 特徴で探す</h2>
+         <div class="tag-wrapper">
+           <% @tags.each do |tag| %>
+             <%= link_to "#{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class: "label label-default" %>
+           <% end %>
+         </div>
        </div>
         <br>
-        <a class="js-modal-close" href="">閉じる</a>
+        <a class="js-modal-close, btn btn-outline-dark" href="">✖️</a>
     </div>
   </div>
