--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -7,12 +7,13 @@
   <div class="modal__bg js-modal-close"></div>
     <div class="modal__content">
       <div class="map-index">
-        <iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV&z=12" width="800" height="480"></iframe>
+        <h2 class="map-index__map">地図で探す</h2>
+          <iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV&z=12" width="800" height="480"></iframe>
       </div>
       <br>
       <a class="js-modal-close, btn btn-outline-dark" href="">✖️</a>
-   </div>
- </div>
+    </div>
+  </div>
  <div id="modal02" class="modal js-modal">
    <div class="modal__bg js-modal-close"></div>
      <div class="modal__content">
