--- a/app/views/posts/likes.html.erb
+++ b/app/views/posts/likes.html.erb
@@ -38,30 +38,38 @@
   </div>
  </div>
  <br>
-  <div class="row-actions" id="comment-form-post-<%= @post.id.to_s %>">
-    <%= form_with model: [@post, Comment.new], class: "w-100" do |f| %>
-      <%= f.hidden_field :user_id, value: current_user.id %>
-      <%= f.hidden_field :post_id, value: @post.id %>
-      <%= f.text_field :comment, class: "form-control comment-input border-0", placeholder: "レビューする ...", autocomplete: :off %>
-    <% end %>
-  </div>
+
+ <% if user_signed_in? %>
+   <div class="row-actions" id="comment-form-post-<%= @post.id.to_s %>">
+      <%= form_with model: [@post, Comment.new], class: "w-100" do |f| %>
+        <%= f.hidden_field :user_id, value: current_user.id %>
+        <%= f.hidden_field :post_id, value: @post.id %>
+       <%= f.text_field :comment, class: "form-control comment-input border-0", placeholder: "レビューする ...", autocomplete: :off %>
+     <% end %>
+   </div>
+ <% end %>
+
 
   <ul class="user-tabs">
     <li><%= link_to("「レビュー」したユーザー", "/posts/#{@post.id}") %></li>
     <li  class="active"><%= link_to("「いいね！」したユーザー", "/posts/#{@post.id}/likes") %></li>
   </ul>
   <br>
-  <% @post.likes.each do |like| %>
-    <div class="mb-2">
-      <span>
-        <div class="comment-user-image">
-          <%= image_tag like.user.image_name.to_s %>
-        </div>
+  <% if @likes.present? %>
+    <% @post.likes.each do |like| %>
+      <div class="mb-2">
+        <span>
+          <div class="comment-user-image">
+            <%= image_tag like.user.image_name.to_s %>
+          </div>
         <strong>
           <%= link_to like.user.name, user_path(like.user), class: "no-text-decoration black-color" %>
         </strong>
-      </span>
-    </div>
+        </span>
+      </div>
+    <% end %>
+  <% else %>
+    &nbsp;まだ「いいね！」はありません。
   <% end %>
 
   <br>
