--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -67,7 +67,7 @@
        <%= render 'comment_list', { post: @post } %>
      </div>
    <% else %>
-     &nbsp;まだレビューはありません。
+     まだレビューはありません。
    <% end %>
 
    <br>
