ページネーション搭載

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -35,10 +35,12 @@
                 </a>
             </div>
           </div>
-
         <% end %>
         </div>
       </div>
+    <br>
     <% end %>
+    <br>
+    <%= paginate @posts %>
   </div>
 </div>
