--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -107,6 +107,36 @@ footer {
 }
 
 /*ページネーション*/
-.pagination ul{
-  background-color: white;
+nav {
+  position:relative;
+  height: 47px;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  background-color: #D7EEFF;
+}
+
+ul.pagination {
+  position:absolute;
+  background-color: #D7EEFF;
+  top: 0px;
+}
+
+li.page-item.active {
+  background-color: #D7EEFF;
+}
+
+.pagination>li>a {
+  border: none;     /*枠線をなくす*/
+  color: #696969;   /*文字の色を変える*/
+}
+
+/* 表示しているページ番号のデザイン */
+.pagination>.active>a {
+  background-color: white;     /*背景の色を変える*/
+  border-radius: 15px;     /*角を丸くする*/
+}
+
+/*ホバー時のデザイン*/
+.pagination>li>a:hover {
+  border-radius: 15px;    /*角を丸くする*/
 }
