テーブル名変更CSV成功

--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,3 +1,2 @@
-$('#comment-post-<%= @post.id.to_s %>').
-  html('<%= j render "posts/comment_list", { post: @post } %>');
-  
+$('#comment-post-<%= @park.id.to_s %>').
+  html('<%= j render "parks/comment_list", { park: @park } %>');
