--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,3 @@
-$('#comment-post-<%= @post.id.to_s %>').
-  html('<%= j render "posts/comment_list", { post: @post } %>');
-$('#comment-form-post-<%= @post.id.to_s %> #comment_comment').val("");
+$('#comment-post-<%= @park.id.to_s %>').
+  html('<%= j render "parks/comment_list", { park: @park } %>');
+$('#comment-form-post-<%= @park.id.to_s %> #comment_comment').val("");
