--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -4,7 +4,7 @@
       <div class="vertical_like">
         <i class="material-icons red-text">favorite</i>
           <span class="red-text">
-            <%= park.like_users.count %>
+            <%= park.likes_count %>
           </span>
       </div>
    <% end %>
@@ -13,7 +13,7 @@
     <div class="vertical_like">
       <i class="material-icons grey-text text-darken-2">favorite_border</i>
         <span class="grey-text text-darken-2">
-          <%= park.like_users.count %>
+          <%= park.likes_count %>
         </span>
     </div>
   <% end %>
