--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,7 +16,7 @@
     <hr>
     <br>
       <div class="show-index">
-        <a class="btn btn-outline-info" href="/posts" role="button">公園一覧へ</a>
+        <a class="btn btn-outline-info" href="/parks" role="button">公園一覧へ</a>
       </div>
     <br>
   </div>
