--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -16,20 +16,20 @@
   </ul>
   <div class="posts-index-item">
     <% @likes.each do |like| %>
-    <% post = Post.find_by(id: like.post_id) %>
+    <% park = Park.find_by(id: like.park_id) %>
 
         <div class="post-user-image">
-          <%= image_tag post.image.to_s %>
+          <%= image_tag park.image.to_s %>
         </div>
         <div class="post-user-name">
-          <%= link_to(post.park, "/posts/#{post.id}") %>
+          <%= link_to(park.park_name, "/parks/#{park.id}") %>
         </div>
       <% end %>
       <br>
       <hr>
       <br>
         <div class="show-index">
-          <a class="btn btn-outline-info" href="/posts" role="button">公園一覧へ</a>
+          <a class="btn btn-outline-info" href="/parks" role="button">公園一覧へ</a>
         </div>
       <br>
     </div>
