--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,10 +17,10 @@
   <div class="posts-index-item">
     <% @user.comments.each do |comment| %>
       <div class="post-user-image">
-        <%= image_tag comment.post.image.to_s %>
+        <%= image_tag comment.park.image.to_s %>
       </div>
       <div class="post-user-name">
-        <%= link_to(comment.post.park, "/posts/#{comment.post.id}") %>
+        <%= link_to(comment.park.park_name, "/parks/#{comment.park.id}") %>
       </div>
       <div class="post-ruser-comment">
         <%= comment.comment %>
@@ -30,7 +30,7 @@
   <hr>
   <br>
     <div class="show-index">
-      <a class="btn btn-outline-info" href="/posts" role="button">公園一覧へ</a>
+      <a class="btn btn-outline-info" href="/parks" role="button">公園一覧へ</a>
     </div>
     <br>
   </div>
